# xf86-input-joystick

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-code-cleanup.yml  04-doc-update.yml  05-org-task.yml
config/: 50-joystick-all.conf  50-x11-input-joystick.fdi
include/: joystick-properties.h
man/: Makefile.am  joystick.man  joystick.man.in
src/: Makefile.am  backend_bsd.c  backend_bsd.h  backend_evdev.c  backend_evdev.h  backend_joystick.c  backend_joystick.h  jstk.c  jstk.h  jstk_axis.c  jstk_axis.h  jstk_key.c  jstk_key.h  jstk_options.c  jstk_options.h  jstk_properties.c  jstk_properties.h
